@@ -3,6 +3,8 @@ Version: 2.3.2
 Date: ????
   Changes:
     - Entering the Sandbox from a Remote View will later return you to that same view, instead of your character
+  Bugfixes:
+    - Remote Views won't be automatically closed for Gods or Editors, to prevent losing their inventories
 ---------------------------------------------------------------------------------------------------
 Version: 2.3.1
 Date: 2024-12-09
